<resources>
    <string name="app_name">Final Project</string>
    <string name="wellcomeback">Wellcome\nBack</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_google">Google</string>
    <string name="textview_register">Are you new user? register</string>
    <string name="CreateAccount">CreateAccount</string>
    <string name="input_name">Name</string>
    <string name="input_phone">Phone</string>
    <string name="textview_Login">Login</string>
    <string name="textview_forgot">Forgot Password</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">Retype Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="JordanDesciption">Air Jordan is a line of basketball shoes and athletic clothing produced by American corporation Nike. The first Air Jordan shoe was produced for Hall of Fame former basketball player Michael Jordan</string>
</resources>