<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.Login.LoginActivity">


    <ImageView
        android:id="@+id/ImgagviewWelcome"
        android:layout_width="416dp"
        android:layout_height="283dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background1" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFacebookLogin3"
        style="android:style/widget.button"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginBottom="160dp"
        android:layout_weight="0.5"
        android:background="@drawable/btn_login_welcome"
        android:backgroundTint="#6672ff"
        android:padding="16dp"
        android:text="@string/textview_Login"
        android:textColor="@color/blue_hex"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="354dp"
        android:layout_height="101dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/wellcomeback"
        android:textColor="@color/img_wellcome_login"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImgagviewWelcome" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebookLogin3"
        app:layout_constraintVertical_bias="0.069">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFacebookLogin"
            style="android:style/widget.button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_background"
            android:drawableEnd="@drawable/facebook"
            android:padding="16dp"
            android:text="@string/button_facebook"
            android:textColor="@color/blue_hex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGoogleLogin"
            style="android:style/widget.button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_background"
            android:drawableEnd="@drawable/google"
            android:padding="16dp"
            android:text="@string/button_google"
            android:textColor="@color/blue_hex"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_register"
        android:textColor="@color/blue_hex"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>