<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.Forgotpassword.ForgotPasswordActivity">

    <EditText
        android:id="@+id/editTextPasswordForgot"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:textColorHint="#3B60BC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneForgot" />

    <ImageView
        android:id="@+id/imageViewForgot"
        android:layout_width="416dp"
        android:layout_height="283dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background1" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/textview_forgot"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewForgot" />

    <EditText
        android:id="@+id/editTextPhoneForgot"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:textColorHint="#3B60BC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

    <ImageView
        android:id="@+id/imageViewForgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordForgot"
        app:srcCompat="@drawable/btn_arraw1" />

    <TextView
        android:id="@+id/textViewSigninForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_register"
        android:textColor="@color/blue_hex"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />


</androidx.constraintlayout.widget.ConstraintLayout>