<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.finalproject.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.Login.loginFragment">

        <EditText
            android:id="@+id/textinputPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputEmailLogin" />

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="416dp"
            android:layout_height="283dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background1" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_Login"
            android:layout_marginStart="32dp"
            android:textColor="@color/img_wellcome_login"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

        <EditText
            android:id="@+id/textinputEmailLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:hint="@string/input_email"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

        <ImageView
            android:id="@+id/buttonLogin"
            android:layout_width="52dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputPasswordLogin"
            app:srcCompat="@drawable/btn_arraw1" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview_register"
            android:textColor="@color/blue_hex"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
