<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/imageViewSignUp"
            android:layout_width="416dp"
            android:layout_height="283dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background1" />

        <EditText
            android:id="@+id/edtPhoneSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPasswordSignUp" />

        <EditText
            android:id="@+id/edtPasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailSignUp" />


        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/CreateAccount"
            android:textColor="@color/img_wellcome_login"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSignUp" />


        <EditText
            android:id="@+id/inputnameSignup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccount" />


        <EditText
            android:id="@+id/edtEmailSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_input"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputnameSignup" />

        <ImageView
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoneSignUp"
            app:srcCompat="@drawable/btn_arraw1" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview_Login"
            android:textColor="@color/blue_hex"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoneSignUp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>